[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "husrev"
version = "1.5.3"
authors = [
  { name="Mustafa Hüsrevoğlu", email="mhusrevoglu@gmail.com" },
]
description = "Creates each SQLAlchemy class file separately"
readme = "README.rst"
requires-python = ">=3.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MMustafa53/husrev"
"Bug Tracker" = "https://github.com/MMustafa53/husrev/issues"